--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 
 <body>
 	<div class="container">
+		<input type="number" name="" id="a" value="1">
+		<input type="number" name="" id="b" value="1">
+		<input type="button" value="OK" id="btn">
 		 <!-- та самая таблица  -->
 		<table id="table"></table>
 	</div>
